--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17563,26 +17563,31 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 148, 33, 50, 14
 }
 
-SALAVENTAS DIALOG DISCARDABLE 193, 47, 243, 148
+SALAVENTAS DIALOG DISCARDABLE 193, 47, 329, 157
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Sala de ventas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 70, 10, 32, 11
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 70, 22, 164, 11
-  CONTROL "", 120, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 70, 35, 163, 101
-  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 70, 49, 163, 101
-  CONTROL "", 140, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 70, 63, 163, 101
-  CONTROL "Solicitar comensales al abrir ticket", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 70, 79, 119, 10
-  CONTROL "[F3] &Edición visual de sala de ventas", 503, "Button", WS_TABSTOP, 69, 92, 163, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 133, 128, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 188, 128, 50, 14
-  CONTROL "Código", -1, "Static", WS_GROUP, 5, 13, 27, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 5, 25, 27, 8
-  CONTROL "Sala", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 2, 2, 236, 114
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 5, 38, 29, 8
-  CONTROL "Tarifa productos", -1, "Static", WS_GROUP, 5, 52, 57, 8
-  CONTROL "Tarifa combinados", -1, "Static", WS_GROUP, 5, 66, 63, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 73, 10, 32, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 73, 22, 246, 11
+  CONTROL "", 120, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 73, 35, 246, 101
+  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 73, 49, 246, 101
+  CONTROL "", 140, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 73, 63, 246, 101
+  CONTROL "Solicitar comensales al abrir ticket", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 95, 119, 10
+  CONTROL "[F3] &Edición visual de sala de ventas", 503, "Button", WS_TABSTOP, 2, 140, 163, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 219, 140, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 274, 140, 50, 14
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 13, 27, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 25, 27, 8
+  CONTROL "Sala", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 2, 2, 322, 79
+  CONTROL "Imagen", -1, "Static", WS_GROUP, 8, 38, 29, 8
+  CONTROL "Tarifa productos", -1, "Static", WS_GROUP, 8, 52, 57, 8
+  CONTROL "Tarifa combinados", -1, "Static", WS_GROUP, 8, 66, 63, 8
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 73, 108, 80, 11
+  CONTROL "", 161, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 155, 108, 164, 11
+  CONTROL "Añadir artículo", 162, "Static", WS_GROUP, 8, 111, 60, 8
+  CONTROL "Apertura de mesa", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 2, 83, 322, 53
+  CONTROL "Multiplicar articulo por comensales", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 23, 122, 121, 10
 }
 
 SATCLI_1 DIALOG DISCARDABLE 64, -21, 670, 375
