--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -19498,3 +19498,68 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 96, 50, 14
 }
 
+DIAFACPGO DIALOG DISCARDABLE -2, -14, 406, 244
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 1110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 9, 55, 11
+  CONTROL "", 1120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 22, 55, 11
+  CONTROL "Todas las formas de pago", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 40, 96, 12
+  CONTROL "", 70, "Edit", WS_BORDER|WS_TABSTOP, 59, 52, 70, 11
+  CONTROL "", 80, "Edit", WS_BORDER|WS_TABSTOP, 131, 52, 138, 11
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 59, 64, 70, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 131, 64, 138, 11
+  CONTROL "Resumir informe", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 59, 106, 68, 12
+  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 59, 118, 88, 55
+  CONTROL "", 219, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 59, 132, 88, 55
+  CONTROL "", 1130, "Edit", WS_BORDER|WS_TABSTOP, 59, 163, 35, 11
+  CONTROL "", 1131, "TBitmap", 0x00800000, 97, 163, 18, 11
+  CONTROL "", 1140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 59, 188, 210, 11
+  CONTROL "", 1150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 59, 201, 210, 11
+  CONTROL "", 1160, "TApoloMeter", 0x00000000, 59, 225, 210, 10
+  CONTROL "Todas", 1170, "TWebBtn", 0x00000000, 290, 12, 50, 11
+  CONTROL "Ninguna", 1180, "TWebBtn", 0x00000000, 345, 12, 50, 11
+  CONTROL "Serie A", 1190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 25, 40, 12
+  CONTROL "Serie B", 1200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 37, 40, 12
+  CONTROL "Serie C", 1210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 49, 39, 12
+  CONTROL "Serie D", 1220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 61, 39, 12
+  CONTROL "Serie E", 1230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 73, 37, 12
+  CONTROL "Serie F", 1240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 85, 39, 12
+  CONTROL "Serie G", 1250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 97, 40, 12
+  CONTROL "Serie H", 1260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 109, 38, 12
+  CONTROL "Serie I", 1270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 121, 34, 12
+  CONTROL "Serie J", 1280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 133, 38, 12
+  CONTROL "Serie K", 1290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 145, 38, 12
+  CONTROL "Serie L", 1300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 157, 39, 12
+  CONTROL "Serie M", 1310, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 169, 40, 12
+  CONTROL "Serie N", 1320, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 181, 40, 12
+  CONTROL "Serie O", 1330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 25, 40, 12
+  CONTROL "Serie P", 1340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 37, 40, 12
+  CONTROL "Serie Q", 1350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 49, 39, 12
+  CONTROL "Serie R", 1360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 61, 39, 12
+  CONTROL "Serie S", 1370, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 73, 37, 12
+  CONTROL "Serie T", 1380, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 85, 39, 12
+  CONTROL "Serie U", 1390, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 97, 40, 12
+  CONTROL "Serie V", 1400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 109, 38, 12
+  CONTROL "Serie W", 1410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 121, 37, 12
+  CONTROL "Serie X", 1420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 133, 38, 12
+  CONTROL "Serie Y", 1430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 145, 39, 12
+  CONTROL "Serie Z", 1440, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 345, 157, 40, 12
+  CONTROL "Desde", -1, "Static", WS_GROUP, 8, 12, 43, 8
+  CONTROL "Rango", -1, "Button", BS_GROUPBOX, 2, 1, 273, 77
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 25, 43, 8
+  CONTROL "Desde", -1, "Static", WS_GROUP, 8, 54, 30, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 65, 30, 8
+  CONTROL "Condiciones", -1, "Button", BS_GROUPBOX, 2, 79, 273, 71
+  CONTROL "Estado", 217, "Static", WS_GROUP, 8, 120, 49, 8
+  CONTROL "Ordenar por", -1, "Static", WS_GROUP, 8, 135, 49, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 163, 26, 8
+  CONTROL "Divisa", -1, "Button", BS_GROUPBOX, 2, 151, 274, 27
+  CONTROL "Título", -1, "Static", WS_GROUP, 8, 191, 31, 8
+  CONTROL "Títulos", -1, "Button", BS_GROUPBOX, 2, 178, 273, 38
+  CONTROL "Subtítulo", -1, "Static", WS_GROUP, 8, 204, 32, 8
+  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 2, 216, 273, 23
+  CONTROL "Series", -1, "Button", BS_GROUPBOX, 279, 1, 122, 237
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 39, 269, 2
+}
+
