--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1701,35 +1701,35 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 82, 308, 1
 }
 
-ARTPRV DIALOG DISCARDABLE 48, 64, 264, 152
+ARTPRV DIALOG DISCARDABLE 48, 64, 383, 157
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Proveedores del artículo"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 56, 12, 70, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 128, 12, 130, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 56, 24, 70, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 56, 48, 52, 12
-  CONTROL "", 151, "TBitmap", 0x00800000, 110, 48, 18, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 61, 72, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 73, 40, 12
-  CONTROL "", 145, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 86, 40, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_BORDER, 56, 104, 72, 12
-  CONTROL "Proveedor por defecto", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 121, 83, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 156, 136, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 211, 136, 50, 14
-  CONTROL "Datos del proveedor", -1, "Button", BS_GROUPBOX, 2, 2, 260, 37
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 2, 39, 260, 61
-  CONTROL "", -1, "Button", BS_GROUPBOX, 2, 98, 260, 20
-  CONTROL "", -1, "Button", BS_GROUPBOX, 2, 116, 260, 18
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 56, 12, 70, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 128, 12, 247, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 56, 24, 141, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 56, 50, 52, 11
+  CONTROL "", 151, "TBitmap", 0x00800000, 110, 50, 18, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 63, 72, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 75, 40, 11
+  CONTROL "", 145, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 88, 40, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_BORDER, 56, 106, 72, 11
+  CONTROL "Proveedor por defecto", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 123, 83, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 275, 138, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 330, 138, 50, 14
+  CONTROL "Datos del proveedor", -1, "Button", BS_GROUPBOX, 2, 2, 378, 37
+  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 2, 41, 378, 61
+  CONTROL "", -1, "Button", BS_GROUPBOX, 2, 100, 378, 20
+  CONTROL "", -1, "Button", BS_GROUPBOX, 2, 118, 378, 18
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 15, 33, 8
   CONTROL "Su referencia", -1, "Static", WS_GROUP, 5, 27, 47, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 5, 51, 32, 8
-  CONTROL "Ultimo precio", -1, "Static", WS_GROUP, 5, 64, 43, 8
-  CONTROL "Descuento", -1, "Static", WS_GROUP, 5, 76, 48, 8
-  CONTROL "Dto. promoción", -1, "Static", WS_GROUP, 5, 89, 48, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 98, 76, 10, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 98, 88, 10, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 5, 53, 32, 8
+  CONTROL "Ultimo precio", -1, "Static", WS_GROUP, 5, 66, 43, 8
+  CONTROL "Descuento", -1, "Static", WS_GROUP, 5, 78, 48, 8
+  CONTROL "Dto. promoción", -1, "Static", WS_GROUP, 5, 91, 48, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 98, 78, 10, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 98, 90, 10, 8
   CONTROL "Total", -1, "Static", WS_GROUP, 6, 107, 20, 8
 }
 
@@ -15453,28 +15453,28 @@ PEDCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 100, 53, 72, 12
-  CONTROL "", 301, "Edit", WS_BORDER, 174, 53, 184, 12
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 100, 66, 72, 12
-  CONTROL "", 166, "Edit", WS_BORDER, 174, 66, 184, 12
-  CONTROL "", 127, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 78, 72, 12
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 100, 53, 72, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 174, 53, 184, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 100, 66, 72, 11
+  CONTROL "", 166, "Edit", WS_BORDER, 174, 66, 184, 11
+  CONTROL "", 127, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 78, 72, 11
   CONTROL "Listo para entregar", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 91, 72, 10
   CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 49, 103, 40, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 102, 86, 12
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 102, 50, 12
-  CONTROL "Anulado", 130, "Button", BS_AUTOCHECKBOX, 49, 116, 42, 10
-  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 115, 86, 12
-  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 115, 170, 12
-  CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 420, 40, 64, 12
-  CONTROL "", 236, "Edit", WS_BORDER, 485, 40, 169, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 420, 53, 234, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 420, 66, 88, 12
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 78, 70, 12
-  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 66, 102, 12
-  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 78, 102, 12
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 90, 102, 12
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 144, 410, 12
-  CONTROL "", 180, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 144, 100, 12
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 102, 86, 11
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 102, 50, 11
+  CONTROL "Cancelado", 130, "Button", BS_AUTOCHECKBOX, 49, 116, 47, 10
+  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 115, 86, 11
+  CONTROL "Motivo cancelación", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 115, 170, 11
+  CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 420, 40, 64, 11
+  CONTROL "", 236, "Edit", WS_BORDER, 485, 40, 169, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 420, 53, 234, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 420, 66, 88, 11
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 78, 70, 11
+  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 66, 102, 11
+  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 78, 102, 11
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 90, 102, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 144, 410, 11
+  CONTROL "", 180, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 144, 100, 11
   CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 157, 552, 46
   CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 205, 552, 46
   CONTROL "&Añadir [F2]", 500, "Button", WS_TABSTOP, 49, 269, 50, 14
@@ -15511,8 +15511,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Button", BS_GROUPBOX, 522, 346, 138, 27
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pedidos de clientes", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "", 115, "Edit", WS_BORDER|WS_TABSTOP, 100, 40, 72, 12
-  CONTROL "", 116, "Edit", WS_BORDER, 174, 40, 184, 12
+  CONTROL "", 115, "Edit", WS_BORDER|WS_TABSTOP, 100, 40, 72, 11
+  CONTROL "", 116, "Edit", WS_BORDER, 174, 40, 184, 11
   CONTROL "Usuario", -1, "Static", WS_GROUP, 49, 43, 46, 8
 }
 
