cambios en tablet

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3431,7 +3431,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 196, "Edit", WS_BORDER|WS_TABSTOP, 411, 101, 76, 11
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 411, 114, 76, 11
   CONTROL "", 95, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 411, 126, 76, 71
-  CONTROL "Email", 159, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 47, 127, 46, 10
+  CONTROL "Email", 159, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 47, 128, 46, 10
   CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 98, 145, 54, 11
   CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 154, 145, 202, 11
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 98, 158, 54, 11
@@ -3494,100 +3494,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Teléfono 2", -1, "Static", WS_GROUP, 363, 78, 35, 8
   CONTROL "Combinado", -1, "Static", WS_GROUP, 363, 161, 41, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 47, 199, 34, 8
-}
-
-CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 266
-STYLE WS_CHILD|DS_3DLOOK
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 101, 39, 270, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 101, 51, 270, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 101, 63, 270, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 75, 113, 11
-  CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 305, 77, 66, 11
-  CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 127, 60, 10
-  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 81, 10
-  CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 139, 60, 10
-  CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 151, 60, 10
-  CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 163, 60, 10
-  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 101, 187, 93, 40
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 202, 38, 11
-  CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 204, 126, 122, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 126, 40, 11
-  CONTROL "", 169, "Edit", WS_BORDER|WS_TABSTOP, 204, 138, 122, 11
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 138, 40, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 204, 150, 122, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 150, 40, 11
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 204, 162, 122, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 162, 40, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 204, 187, 122, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 187, 40, 11
-  CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 200, 86, 11
-  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 227, 124, 10
-  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 239, 124, 10
-  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 225, 86, 11
-  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 237, 86, 11
-  CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 11
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 39, 30, 11
-  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 453, 39, 34, 11
-  CONTROL "Mar.", 231, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 53, 27, 11
-  CONTROL "", 331, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 52, 30, 11
-  CONTROL "", 431, "Edit", WS_BORDER|WS_TABSTOP, 453, 52, 34, 11
-  CONTROL "Mie.", 232, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 66, 27, 11
-  CONTROL "", 332, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 65, 30, 11
-  CONTROL "", 432, "Edit", WS_BORDER|WS_TABSTOP, 453, 65, 34, 11
-  CONTROL "Jue.", 233, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 79, 27, 11
-  CONTROL "", 333, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 78, 30, 11
-  CONTROL "", 433, "Edit", WS_BORDER|WS_TABSTOP, 453, 78, 34, 11
-  CONTROL "Vie.", 234, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 92, 25, 11
-  CONTROL "", 334, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 91, 30, 11
-  CONTROL "", 434, "Edit", WS_BORDER|WS_TABSTOP, 453, 91, 34, 11
-  CONTROL "Sáb.", 235, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 105, 28, 11
-  CONTROL "", 335, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 104, 30, 11
-  CONTROL "", 435, "Edit", WS_BORDER|WS_TABSTOP, 453, 104, 34, 11
-  CONTROL "Dom.", 236, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 118, 30, 11
-  CONTROL "", 336, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 117, 30, 11
-  CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 117, 34, 11
-  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 182, 81, 11
-  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 148, 96, 11
-  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 196, 64, 11
-  CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 214, 60, 11
-  CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 237, 96, 11
-  CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 41, 26, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 54, 31, 8
-  CONTROL "Web", -1, "Static", WS_GROUP, 50, 66, 21, 8
-  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 228, 29, 11
-  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 240, 39, 11
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 153, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 165, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 189, 8, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 128, 8, 8
-  CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 137, 73, 10
-  CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 61
-  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 115, 155, 101
-  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 171, 108, 91
-  CONTROL "Descuentos", 98, "Button", BS_GROUPBOX, 199, 115, 182, 61
-  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 142
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 140, 8, 8
-  CONTROL "Aplicado en", -1, "Static", WS_GROUP, 206, 204, 47, 10
-  CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 50, 205, 36, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 142, 205, 9, 8
-  CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 190, 45, 8
-  CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 199, 177, 182, 39
-  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 216, 338, 47
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 214, 25, 10
-  CONTROL "Motivo", -1, "Static", WS_GROUP, 391, 226, 24, 10
-  CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 78, 37, 8
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Datos realcionados con la actividad comercial del cliente ", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Última llamada", -1, "Button", BS_GROUPBOX, 43, 90, 155, 23
-  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 99, 60, 11
-  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 163, 99, 28, 11
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 49, 102, 35, 8
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 89, 99, 12, 11
-  CONTROL "", -1, "Button", BS_GROUPBOX, 199, 90, 182, 23
-  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 283, 100, 76, 11
-  CONTROL "EDI [EAN]", 4002, "Static", WS_GROUP, 206, 103, 38, 8
 }
 
 CLIENT_10 DIALOG DISCARDABLE 32, 32, 496, 266
@@ -20702,5 +20608,100 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", 101, "Button", WS_TABSTOP, 305, 172, 50, 14
   CONTROL "&Limpiar", 102, "Button", WS_TABSTOP, 4, 172, 35, 14
   CONTROL "", 200, "Static", SS_BLACKFRAME, 4, 2, 350, 166
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 263
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 101, 39, 270, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 101, 51, 270, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 101, 63, 270, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 75, 103, 11
+  CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 305, 77, 66, 11
+  CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 127, 60, 10
+  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 81, 10
+  CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 139, 60, 10
+  CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 151, 60, 10
+  CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 163, 60, 10
+  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 101, 187, 93, 40
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 202, 38, 11
+  CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 204, 126, 124, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 126, 40, 11
+  CONTROL "", 169, "Edit", WS_BORDER|WS_TABSTOP, 204, 138, 124, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 138, 40, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 204, 150, 124, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 150, 40, 11
+  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 204, 162, 124, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 162, 40, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 204, 187, 124, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 187, 40, 11
+  CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 200, 86, 11
+  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 230, 124, 10
+  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 242, 124, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 228, 86, 11
+  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 240, 86, 11
+  CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 11
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 39, 30, 11
+  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 453, 39, 34, 11
+  CONTROL "Mar.", 231, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 53, 27, 11
+  CONTROL "", 331, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 52, 30, 11
+  CONTROL "", 431, "Edit", WS_BORDER|WS_TABSTOP, 453, 52, 34, 11
+  CONTROL "Mie.", 232, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 66, 27, 11
+  CONTROL "", 332, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 65, 30, 11
+  CONTROL "", 432, "Edit", WS_BORDER|WS_TABSTOP, 453, 65, 34, 11
+  CONTROL "Jue.", 233, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 79, 27, 11
+  CONTROL "", 333, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 78, 30, 11
+  CONTROL "", 433, "Edit", WS_BORDER|WS_TABSTOP, 453, 78, 34, 11
+  CONTROL "Vie.", 234, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 92, 25, 11
+  CONTROL "", 334, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 91, 30, 11
+  CONTROL "", 434, "Edit", WS_BORDER|WS_TABSTOP, 453, 91, 34, 11
+  CONTROL "Sáb.", 235, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 105, 28, 11
+  CONTROL "", 335, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 104, 30, 11
+  CONTROL "", 435, "Edit", WS_BORDER|WS_TABSTOP, 453, 104, 34, 11
+  CONTROL "Dom.", 236, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 118, 30, 11
+  CONTROL "", 336, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 117, 30, 11
+  CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 117, 34, 11
+  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 182, 81, 11
+  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 148, 96, 11
+  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 196, 64, 11
+  CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 213, 60, 11
+  CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 240, 96, 11
+  CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 41, 26, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 54, 31, 8
+  CONTROL "Web", -1, "Static", WS_GROUP, 50, 66, 21, 8
+  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 231, 29, 11
+  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 243, 39, 11
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 153, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 165, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 189, 8, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 128, 8, 8
+  CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 137, 73, 10
+  CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 61
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 115, 155, 101
+  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 171, 108, 85
+  CONTROL "Descuentos", 98, "Button", BS_GROUPBOX, 199, 115, 182, 61
+  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 139
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 140, 8, 8
+  CONTROL "Aplicado en", -1, "Static", WS_GROUP, 206, 204, 47, 10
+  CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 50, 205, 36, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 142, 205, 9, 8
+  CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 190, 45, 8
+  CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 199, 177, 182, 39
+  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 219, 338, 37
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 213, 25, 10
+  CONTROL "Motivo", -1, "Static", WS_GROUP, 391, 229, 24, 10
+  CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 78, 37, 8
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Datos realcionados con la actividad comercial del cliente ", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 115, 98, 60, 11
+  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 176, 98, 28, 11
+  CONTROL "Ult. llamada", -1, "Static", WS_GROUP, 51, 101, 48, 8
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 102, 98, 12, 11
+  CONTROL "", -1, "Button", BS_GROUPBOX, 43, 90, 338, 23
+  CONTROL "", 146, "Edit", WS_BORDER|WS_TABSTOP, 257, 98, 114, 11
+  CONTROL "EDI [EAN]", 4002, "Static", WS_GROUP, 208, 100, 38, 8
 }
 
