--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12759,7 +12759,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-LFACCLI_6 DIALOG DISCARDABLE 16, 4, 359, 222
+LFACCLI_6 DIALOG DISCARDABLE 16, 4, 359, 257
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -12775,29 +12775,32 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 161, "Edit", WS_BORDER, 161, 81, 194, 11
   CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 100, 94, 60, 11
   CONTROL "", 321, "Edit", WS_BORDER, 161, 94, 194, 11
-  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 100, 107, 60, 11
-  CONTROL "", 371, "Edit", WS_BORDER, 162, 107, 194, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 120, 100, 11
-  CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 132, 192, 10
-  CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 132, 106, 10
-  CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 142, 107, 10
-  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 142, 79, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 165, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 178, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 190, 71, 10
-  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 201, 60, 11
-  CONTROL "", 361, "Edit", ES_MULTILINE|WS_BORDER, 164, 201, 40, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 100, 107, 60, 11
+  CONTROL "", 191, "Edit", WS_BORDER, 161, 107, 194, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 100, 119, 60, 11
+  CONTROL "", 371, "Edit", WS_BORDER, 162, 119, 194, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 132, 100, 11
+  CONTROL "Utilizar el volumen en el cálculo de impuestos especiales", 411, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 144, 192, 10
+  CONTROL "Linea de artículo compuesto", 331, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 144, 106, 10
+  CONTROL "Linea de artículo componente", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 154, 107, 10
+  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 154, 79, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 177, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 190, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 202, 71, 10
+  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 213, 60, 11
+  CONTROL "", 361, "Edit", ES_MULTILINE|WS_BORDER, 164, 213, 40, 11
   CONTROL "Nº Línea", -1, "Static", WS_GROUP, 5, 4, 30, 8
   CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 46, 80, 8
   CONTROL "Fecha de entrega", -1, "Static", WS_GROUP, 5, 25, 66, 8
   CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 59, 73, 8
   CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 72, 55, 8
   CONTROL "Familia", -1, "Static", WS_GROUP, 5, 84, 55, 8
-  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 122, 24, 8
+  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 134, 24, 8
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 97, 69, 8
-  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 5, 204, 66, 8
-  CONTROL "Stock", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 154, 354, 64
-  CONTROL "Centro de coste", -1, "Static", WS_GROUP, 5, 110, 69, 8
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 5, 216, 66, 8
+  CONTROL "Stock", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 166, 354, 64
+  CONTROL "Centro de coste", -1, "Static", WS_GROUP, 5, 122, 69, 8
+  CONTROL "Dirección", -1, "Static", WS_GROUP, 5, 110, 69, 8
 }
 
 LFACCLI_7 DIALOG DISCARDABLE 16, 4, 359, 221
