--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,19 +1,6 @@
-*.pydevproject
-.project
-.metadata
-[Tt]mp/
-[Oo]bj/
-[Oo]bj1406/
-[Pp]po/
-[Pp]po1406/
-[Dd]atos/
-[Ff]ont/
-[Cc]lient/
-[Ii]ss/[Ee]xe/
-[Bb]in/[Bb]mp/
-[Bb]in/[Ii]nclude/
-[Bb]in/[Dd]atos/
-[Bb]in/[Ee]mp0000/
+*
+Script
+!.gitignore
 
 *.tmp
 *.bak
