--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,48 +1,4 @@
+# Ignore everything in this directory
 *
-Script
+# Except this file
 !.gitignore
-
-*.tmp
-*.bak
-*.swp
-*.res
-*.log
-*.dbf
-*.cdx
-*.fpt
-*.dbw
-*.dbt
-*.dll
-*.ocx
-*.exe
-*.caj
-*.num
-*.ini
-*.chr
-*.add
-*.ai
-*.am
-*.cfg
-*.tds
-*.chr
-*.nil
-*.usr
-*.txt
-*.map
-*.lic
-*.zip
-*.rar
-*.adt
-*.$$$
-*.dmp
-*.ppo
-
-############
-## Windows
-############
-
-# Windows image file caches
-Thumbs.db
-
-# Folder config file
-Desktop.ini
